# lalsuite

./: .Dockerfile.gitlab-ci  .astyle.yaml  .coafile  .flake8  .gitattributes  .gitignore  .gitlab-ci-CW.yml  .gitlab-ci-bookworm.Dockerfile  .gitlab-ci-bullseye.Dockerfile  .gitlab-ci-buster.Dockerfile  .gitlab-ci-el7.Dockerfile  .gitlab-ci-el8.Dockerfile  .gitlab-ci-koji.Dockerfile  .gitlab-ci-stretch.Dockerfile  .gitlab-ci.yml  .mailmap  .mailmap-update  .pre-commit-config.yaml  .ruff.toml  00boot  CONTRIBUTING.md  Dockerfile  Makefile.am  README.md  RELEASE.md  build.in  conda-dev-env.yml  confdefs.h  configure.ac  conftest.tar  diff.patch  lalsuite.spec.in  s6_lowmass_ihope.ini  s6_lowmass_minimalchange_ihope.ini
doxygen/: .gitignore  00boot  DoxygenLayout-html.xml  DoxygenLayout-pdf.xml  LaTeX2doxygen.pl  Makefile.am  check_tags.py  collect_figures.sh  configure.ac  doxy-html-aliases.cfg  doxy-html-config.cfg  doxy-html-config.cfg.in  doxy-html-eqns.sty  doxy-html-header.html  doxy-html-layout.xml  doxy-html-style.css  doxy-pdf-aliases.cfg  doxy-pdf-config.cfg  doxy-pdf-config.cfg.in  doxy-pdf-extra.sty  doxy-pdf-layout.xml  doxy_html_eqns.sty  doxy_pdf_header.tex  doxygen-html.cfg.in  doxygen-pdf.cfg.in  doxygen.cfg.in  doxygen.sty  doxypy.py  filter.in  filter_py.py  filter_swig.sed  gitlab-CODEOWNERS  ignore_warnings.sed  install_regex.py  layout.xml  layout.xml.in  make_autogen_dox.in  mathjax.js  stylesheet.css
doxygen/gnuscripts/: Makefile.am
doxygen/src/: Makefile.am  SWIGLAL_tutorial.dox  biblio.bib  bibliography.bib  bibliography.dox  lal_spec.dox  lalspec.dox  mainpage.dox  merger.eps  modules.dox  toplevel.dox
lal/: .AUTHORS  .gitignore  .historical_authors  00boot  AUTHORS  INSTALL  Makefile.am  NEWS  README  README.bugs  README.contrib  README.install  README.md  acconfig.h  acinclude.m4  configure.ac  configure.in  generate_user_env.awk  lal-config.in  lal-uninstalled.pc.in  lal.pc.in  lal.spec.in  lalmetaio.pc.in  lalmpi.pc.in  lalstochastic.pc.in  lalsupport-uninstalled.pc.in  lalsupport.pc.in  lalxml.pc.in  ltmain.sh  mklibmake  rpmlintrc  testscript.sh
lal/conda/: Makefile.am  build-python.sh  build.sh  common.sh  conda_build_config.yaml  install-lib.sh  install-python.sh  meta.yaml.in  meta.yaml.in.in
lal/debian/: Makefile.am  changelog  control  control.in  copyright  dirs  docs  lal-dev.dirs  lal-dev.install  lal-octave.install  lal-python.install  lal-python3.install  lal.dirs  lal.doc-base.1  lal.doc-base.2  lal.install  liblal.install.in  liblalsupport.install.in  postinst  postrm  rules
lal/doc/: LSD2doxygen.pl  Makefile.am  NRDataFormat.tex  SCCBCharter.tex  install.m4  lal-config.1  lal-install-x.sh  lal-preinstall-x.sh  lal.3  lal.sty  lalspec.tex  ligodcc.cls  lsd.tex  lsdFigDirStructure.eps  merger.eps  oldlalspec.tex  rcs.sty  schedule.eps  scrstrip.sed  tensor.sty  texstrip.sed  txtstrip.sed
lal/doxygen/: Makefile.am  check_tags.py  doxygen.cfg.in  exclude.list  filter.in  filter_py.in  filter_py.py  filter_swig.sed  install_regex.py  layout.xml  layout.xml.in  mathjax.js  stylesheet.css  toplevel.dox
lal/gnuscripts/: Makefile.am  ax_check_compile_flag.m4  ax_compiler_vendor.m4  ax_ext.m4  ax_gcc_archflag.m4  ax_gcc_x86_avx_xgetbv.m4  ax_gcc_x86_cpuid.m4  ax_pthread.m4  lal.m4  lalsuite_doxygen.am
lal/include/: LALConfig.h.in  LALConfigure.h.in  Makefile.am  README.md
lal/lib/: LALConfig.h.in  LALEmpty.c  LALLibVCSInfo.h  LALMisc.c  LALVCSInfo.c  LALVCSInfo.c.in  LALVCSInfo.h.in  LALVCSInfoHeader.h.git  Makefile.am  generate_vcs_info.py  git_version  git_version.in  lal-version.c  simd_dispatch.h
lal/misc/: .gitignore  Makefile.am  acconfig.h  acx_pthread.m4  capture-uninstall.sh  doc.mk  dvi.mk  generateGitID.sh  include.mk  lal-user-env.csh  lal-user-env.sh  lal.m4  lalam15patch.m4  lallibtool.m4  main.tex.in
lal/python/: Makefile.am  __init__.py  __init__.py.in  gpstime.py  series.py
lal/src/: LALConfig.h.in  LALMisc.c  LALVCSInfo.c.in  LALVCSInfo.h.in  Makefile.am  (+6 more)
lalapps/: .AUTHORS  .gitignore  .historical_authors  00boot  AUTHORS  Makefile.am  README  README.bugs  README.contrib  README.md  acconfig.h  acinclude.m4  configure.ac  configure.in  lalapps.spec.in
lalburst/: .AUTHORS  .gitignore  .historical_authors  00boot  AUTHORS  Makefile.am  README  README.md  configure.ac  lalburst-uninstalled.pc.in  lalburst.pc.in  lalburst.spec.in  rpmlintrc
laldetchar/: .AUTHORS  .gitignore  00boot  Makefile.am  README  configure.ac  laldetchar-uninstalled.pc.in  laldetchar.pc.in  laldetchar.spec.in
lalframe/: .AUTHORS  .gitignore  .historical_authors  00boot  AUTHORS  Makefile.am  README  README.md  configure.ac  generate_user_env.awk  lalframe-uninstalled.pc.in  lalframe.pc.in  lalframe.spec.in
lalinference/: .AUTHORS  .gitignore  .historical_authors  00boot  AUTHORS  Makefile.am  README  README.md  configure.ac  lalinference-uninstalled.pc.in  lalinference.pc.in  lalinference.spec  lalinference.spec.in
lalinspiral/: .AUTHORS  .gitignore  .historical_authors  00boot  AUTHORS  Makefile.am  README  README.md  configure.ac  lalinspiral-uninstalled.pc.in  lalinspiral.pc.in  lalinspiral.spec.in
lalmetaio/: .AUTHORS  .gitignore  .historical_authors  00boot  AUTHORS  Makefile.am  README  README.md  configure.ac  lalmetaio-uninstalled.pc.in  lalmetaio.pc.in  lalmetaio.spec.in
lalpulsar/: .AUTHORS  .common-astylerc  .gitignore  .historical_authors  .pretty.black  .pretty.exclude  00boot  AUTHORS  Makefile.am  README  README.md  attic.txt  configure.ac  lalpulsar-uninstalled.pc.in  lalpulsar.pc.in  lalpulsar.spec.in
lalsimulation/: .AUTHORS  .gitignore  .historical_authors  00boot  AUTHORS  Makefile.am  README  README.md  configure.ac  differences.diff  lalsimulation-uninstalled.pc.in  lalsimulation.pc.in  lalsimulation.spec.in
lalstochastic/: .AUTHORS  .gitignore  00boot  Makefile.am  README  configure.ac  lalstochastic-uninstalled.pc.in  lalstochastic.pc.in  lalstochastic.spec.in
lalxml/: .AUTHORS  .gitignore  00boot  Makefile.am  README  configure.ac  lalxml-uninstalled.pc.in  lalxml.pc.in  lalxml.spec.in
(+8180 files in other folders)
